<resources>
    <string name="app_name">5e Weight Calculator</string>
    <string name="Title_DND">DND 5E</string>
    <string name="title_encumbarance">Encumbarance Calculator</string>
    <string name="new_character">New Character</string>
    <string name="existing_character">Existing Character</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="max_weight">Max Weight</string>
    <string name="max_weight_q">Max Weight :</string>
    <string name="current_weight">Current Weight </string>
    <string name="name">Name :</string>
    <string name="max">Max</string>
    <string name="current">Current</string>
</resources>