<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/character_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.characterselect.CharacterSelect">

    <TextView
        android:id="@+id/Title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Title_DND"
        android:textSize="36sp"
        android:fontFamily="@font/ocr"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Title2"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/Title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ocr"
        android:text="@string/title_encumbarance"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal"
        />

    <Button
        android:id="@+id/new_character_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_button_bg"
        android:text="@string/new_character"
        android:textSize="18dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/existing_character_button"
        style="@style/Widget.Material3.MaterialTimePicker.ImageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/main_button_bg"
        android:text="@string/existing_character"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_character_button"
        app:layout_constraintWidth_percent="0.6" />



</androidx.constraintlayout.widget.ConstraintLayout>