<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.characterselect.NewCharacter">

    <TextView
        android:id="@+id/title_new_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/new_character"
        android:fontFamily="@font/ocr"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/name_tv"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/name"
        android:fontFamily="@font/ocr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        />

    <EditText
        android:id="@+id/new_character_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:hint="Character Name"
        android:fontFamily="@font/ocr"
        app:layout_constraintTop_toTopOf="@id/name_tv"
        app:layout_constraintBottom_toBottomOf="@id/name_tv"
        app:layout_constraintStart_toEndOf="@id/name_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@null"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal"
        />

    <TextView
        android:id="@+id/encumbarance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/max_weight_q"
        android:fontFamily="@font/ocr"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        />

    <EditText
        android:id="@+id/new_character_max_weight_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:hint="Max Weight"
        android:maxLines="1"
        android:inputType="number"
        android:fontFamily="@font/ocr"
        app:layout_constraintTop_toTopOf="@id/encumbarance_tv"
        app:layout_constraintBottom_toBottomOf="@id/encumbarance_tv"
        app:layout_constraintStart_toEndOf="@id/encumbarance_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@null"/>

    <Button
        android:id="@+id/new_character_button"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.6"
        android:layout_height="wrap_content"
        android:text="@string/new_character"
        android:fontFamily="@font/ocr"
        android:textSize="20dp"
        android:background="@drawable/main_button_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/encumbarance_tv"
        android:layout_marginTop="16dp"/>






</androidx.constraintlayout.widget.ConstraintLayout>